# Penguin

./: .gitignore  CMakeLists.txt  LICENSE  LexicalAnalyzer.cpp  Main.h  Makefile  Math.h  Penguin.cpp  README.md  Settings.h  SyntaxAnalyzer.cpp  Tokens.h  main.cpp  make.cmd  make.sh  test.cmd  test.sh  tests.bat  tests.sh
.github/workflows/: ci.yml
docs/: grammar.ebnf  priority_table.md  token_types.md
examples/: 1.1.peng  1.peng  2.peng  3.peng  4.peng  5.peng  6.peng  7.peng  d1.peng  d2.peng  d3.peng  d4.peng  m1.peng
examples/a/: a.peng
examples/budget-allocation/: main.peng
examples/budget-allocation/in/: 2.in  3.in
examples/coin-change-counter/: main.peng
examples/d/in/: 2.in  3.in
examples/euclidean-gcd/: main.peng
examples/f/in/: 1.in
examples/function-io-helpers/in/: 3.in
examples/g/in/: 5.in
examples/i/in/: 1.in
examples/j/: j.peng
examples/k/: k.peng
examples/k/in/: 1.in  2.in  3.in
examples/math-utilities/in/: 2.in  4.in
examples/time-difference/in/: 2.in  3.in
scripts/: make.sh  tests.bat  tests.sh
src/: Executor.cpp  Executor.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Main.h  Math.h  Penguin.cpp  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h
tests/: test_main.cpp
